[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/Mocha Assets/UI/Stripes.png" type="Texture" id=1]
[ext_resource path="res://Objectives/ObjectiveManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/ObjectifButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objectives/ObjectivesScene.gd" type="Script" id=5]
[ext_resource path="res://assets/transition.png" type="Texture" id=6]
[ext_resource path="res://assets/Mocha Assets/UI/IMG_3555.PNG" type="Texture" id=7]
[ext_resource path="res://assets/Mocha Assets/UI/Untitled_Artwork-1.png" type="Texture" id=8]
[ext_resource path="res://assets/Mocha Assets/UI/Untitled_Artwork-3.png" type="Texture" id=9]
[ext_resource path="res://assets/Mocha Assets/UI/Untitled_Artwork-2.png" type="Texture" id=10]
[ext_resource path="res://assets/Mocha Assets/UI/IMG_3556.PNG" type="Texture" id=11]
[ext_resource path="res://assets/Mocha Assets/UI/IMG_3554.PNG" type="Texture" id=12]

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;

uniform bool active = false;
uniform vec4 color : hint_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec2 uv = UV;
	
	if (active == true){
		if (add_margins) {
			vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
			
			uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
			
			if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
				COLOR.a = 0.0;
			} else {
				COLOR = texture(TEXTURE, uv);
			}
		} else {
			COLOR = texture(TEXTURE, uv);
		}
		
		if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
			COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
			COLOR.a += (1.0 - COLOR.a) * color.a;
		}
	} else {
		COLOR = previous_color
	}
}"

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 18 )
shader_param/active = true
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=21]
shader = SubResource( 18 )
shader_param/active = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 18 )
shader_param/active = true
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=25]
shader = SubResource( 18 )
shader_param/active = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=27]
shader = SubResource( 18 )
shader_param/active = true
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=29]
shader = SubResource( 18 )
shader_param/active = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 10.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="Animation" id=31]
resource_name = "Back"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Transition:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 3843, -0.25, 0, 0.25, 0, 827, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Transition:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 546, -0.25, 0, 0.25, 0, 526, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "get_back"
} ]
}

[sub_resource type="Animation" id=32]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ObjectifButtons/ObjectifButton:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -434, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ObjectifButtons/ObjectifButton:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ObjectifButtons/ObjectifButton2:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ObjectifButtons/ObjectifButton2:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 898, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ObjectifButtons/ObjectifButton3:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 439, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ObjectifButtons/ObjectifButton3:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 898, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Transition:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 350, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Transition:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 515, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=30]
resource_name = "Start"
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("Transition:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1415, -0.25, 0, 0.25, 0, 3843, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Transition:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 502, -0.25, 0, 0.25, 0, 546, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ObjectifButtons/ObjectifButton:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -434, -0.25, 0, 0.25, 0, -434, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ObjectifButtons/ObjectifButton:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 898, -0.25, 0, 0.25, 0, -4, -0.2, -152.824, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ObjectifButtons/ObjectifButton2:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ObjectifButtons/ObjectifButton2:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 898, -0.25, 0, 0.25, 0, 0, -0.3, -314.651, 0.25, 0 ),
"times": PoolRealArray( 0, 0.35 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("ObjectifButtons/ObjectifButton3:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 439, -0.25, 0, 0.25, 0, 439, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("ObjectifButtons/ObjectifButton3:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 898, -0.25, 0, 0.2, 263.855, -2, -0.1, -312.651, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=33]
resource_name = "TransitionToPlay"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Transition:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 3843, -0.25, 0, 0.25, 0, 350, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Transition:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 546, -0.25, 0, 0.25, 0, 515, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_to_play_scene"
} ]
}

[node name="ObjectivesScene" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="BackButton" parent="." instance=ExtResource( 3 )]
position = Vector2( 161, 96 )
button_type = 4

[node name="Label" parent="BackButton" index="3"]
text = "back"

[node name="ObjectiveManager" parent="." instance=ExtResource( 2 )]

[node name="EasyStats" parent="ObjectiveManager" index="0"]
EXTRA_CHARACTER_MIN_AMOUNT = 4

[node name="ObjectifButtons" type="Node2D" parent="."]
position = Vector2( 901, 542 )

[node name="ObjectifButton" parent="ObjectifButtons" instance=ExtResource( 4 )]
position = Vector2( -434, -4 )

[node name="ButtonPressed" parent="ObjectifButtons/ObjectifButton" index="0"]
material = SubResource( 19 )
texture = ExtResource( 8 )

[node name="ButtonDefault" parent="ObjectifButtons/ObjectifButton" index="1"]
material = SubResource( 21 )
texture = ExtResource( 12 )

[node name="ObjectifButton2" parent="ObjectifButtons" instance=ExtResource( 4 )]
position = Vector2( 0, 898 )
difficulty = 1

[node name="ButtonPressed" parent="ObjectifButtons/ObjectifButton2" index="0"]
material = SubResource( 23 )
texture = ExtResource( 10 )

[node name="ButtonDefault" parent="ObjectifButtons/ObjectifButton2" index="1"]
material = SubResource( 25 )
texture = ExtResource( 7 )

[node name="ObjectifButton3" parent="ObjectifButtons" instance=ExtResource( 4 )]
position = Vector2( 439, 898 )
difficulty = 2

[node name="ButtonPressed" parent="ObjectifButtons/ObjectifButton3" index="0"]
material = SubResource( 27 )
texture = ExtResource( 9 )

[node name="ButtonDefault" parent="ObjectifButtons/ObjectifButton3" index="1"]
material = SubResource( 29 )
texture = ExtResource( 11 )

[node name="Transition" type="Sprite" parent="."]
position = Vector2( 350, 515 )
scale = Vector2( 1.74734, 1.82556 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Start"
anims/Back = SubResource( 31 )
anims/RESET = SubResource( 32 )
anims/Start = SubResource( 30 )
anims/TransitionToPlay = SubResource( 33 )

[connection signal="back_pressed" from="BackButton" to="." method="_on_BackButton_back_pressed"]
[connection signal="objective_created" from="ObjectiveManager" to="." method="_on_ObjectiveManager_objective_created"]
[connection signal="objectif_pressed" from="ObjectifButtons/ObjectifButton" to="." method="_on_ObjectifButton_objectif_pressed"]
[connection signal="objectif_pressed" from="ObjectifButtons/ObjectifButton2" to="." method="_on_ObjectifButton2_objectif_pressed"]
[connection signal="objectif_pressed" from="ObjectifButtons/ObjectifButton3" to="." method="_on_ObjectifButton3_objectif_pressed"]

[editable path="BackButton"]
[editable path="ObjectiveManager"]
[editable path="ObjectifButtons/ObjectifButton"]
[editable path="ObjectifButtons/ObjectifButton2"]
[editable path="ObjectifButtons/ObjectifButton3"]
